# llm-rag-app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
llm_rag_app/: run_app.py
llm_rag_app/app/: __init__.py  api.py  helpers.py  main.py  rag.py
llm_rag_app/app/api/: __init__.py  routes.py
llm_rag_app/app/core/: config.py
llm_rag_app/app/db/: __init__.py  chroma.py
llm_rag_app/app/services/: pdf_utilities.py  rag.py
llm_rag_app/data/: file
llm_rag_app/frontend/: frontend.py
