[project]
name = "llm-rag-app"
version = "0.1.0"
description = ""
authors = [
    {name = "janse755",email = "tycho.jansen@kpn.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
openai = "^2.30.0"
uvicorn = "^0.44.0"
fastapi = "^0.135.3"
pypdf = "^6.9.2"
dotenv = "^0.9.9"
onnxruntime = "1.16.3"
protobuf = "3.20.3"
chromadb = "^1.5.7"
python-multipart = "^0.0.24"
numpy = "<2"
streamlit = "^1.56.0"
requests = "^2.33.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
